--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,9 @@
     "tabWidth": 4,
     "semi": true,
     "singleQuote": true,
+    "svelteSortOrder": "styles-scripts-markup",
+    "svelteStrictMode": true,
+    "svelteBracketNewLine": true,
+    "svelteAllowShorthand": false,
     "trailingComma": "all"
 }
