--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,15 @@
         "guzzlehttp/guzzle": "^7.2.0",
         "inertiajs/inertia-laravel": "^0.3.5",
         "laravel/framework": "^8.20",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.13.0",
         "friendsofphp/php-cs-fixer": "^2.16",
+        "laravel/breeze": "^1.0",
         "laravel/sail": "^1.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.1",
