--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "autoprefixer": "^10.0.2",
+        "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.3.1",
+        "alpinejs": "^2.7.3",
+        "autoprefixer": "^9.8.6",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.9",
         "laravel-mix-svelte": "^0.1.6",
         "postcss": "^8.1.8",
+        "postcss-import": "^12.0.1",
+        "prettier-plugin-svelte": "^1.4.2",
         "resolve-url-loader": "^3.1.0",
         "stylelint": "^13.8.0",
         "stylelint-config-standard": "^20.0.0",
         "svelte": "^3.29.7",
         "svelte-loader": "^2.13.6",
-        "tailwindcss": "^2.0.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
