--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@tailwindcss/aspect-ratio": "^0.2.0",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/typography": "^0.3.1",
-        "alpinejs": "^2.7.3",
         "autoprefixer": "^9.8.6",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.9",
@@ -27,7 +26,7 @@
         "stylelint-config-standard": "^20.0.0",
         "svelte": "^3.29.7",
         "svelte-loader": "^2.13.6",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+        "tailwindcss": "^2.0.1",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
