--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=01b59860cdffcd5e152a",
-    "/css/app.css": "/css/app.css?id=6afc4816bc70b463692c",
-    "/js/app.js.map": "/js/app.js.map?id=b87dcbf9fb034c007f77",
-    "/css/app.css.map": "/css/app.css.map?id=bc5b26f25b01e61f7704"
+    "/js/app.js": "/js/app.js?id=054a6f06ee4b36a3a741",
+    "/css/app.css": "/css/app.css?id=d53505b68f51544cafcd"
 }
