--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-.DS_Store
 .phpstorm.meta.php
 _ide_helper_models.php
 _ide_helper.php
 .php_cs.cache
+/.vercel
 /node_modules
+/public/mix-manifest.json
+/public/css
+/public/js
 /public/hot
 /public/storage
 /storage/*.key
@@ -15,3 +18,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.DS_Store
