--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=b7b0fd5a6db7783dbc62",
-    "/css/app.css": "/css/app.css?id=6d77e1b5152b4d6624b6",
-    "/js/app.js.map": "/js/app.js.map?id=e7306bde756162f6f468",
-    "/css/app.css.map": "/css/app.css.map?id=601e8cccc71bbe13a30e"
+    "/js/app.js": "/js/app.js?id=287ea23d47c344173af6",
+    "/css/app.css": "/css/app.css?id=679e236bee86d9c49243"
 }
