--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=287ea23d47c344173af6",
-    "/css/app.css": "/css/app.css?id=679e236bee86d9c49243"
+    "/js/app.js": "/js/app.js?id=15f2f03b385c411ca93b",
+    "/css/app.css": "/css/app.css?id=0e1d52126a1e20ff7e91",
+    "/js/app.js.map": "/js/app.js.map?id=96a6cc9ebcc2641c5231",
+    "/css/app.css.map": "/css/app.css.map?id=2eac726995421b243b16"
 }
