--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=15f2f03b385c411ca93b",
-    "/css/app.css": "/css/app.css?id=0e1d52126a1e20ff7e91",
-    "/js/app.js.map": "/js/app.js.map?id=96a6cc9ebcc2641c5231",
-    "/css/app.css.map": "/css/app.css.map?id=2eac726995421b243b16"
+    "/js/app.js": "/js/app.js?id=eb04de40e71974a399da",
+    "/css/app.css": "/css/app.css?id=221fc9f4369543d613c7"
 }
