--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=36f38712c9e68d32f54d",
-    "/css/app.css": "/css/app.css?id=221fc9f4369543d613c7"
+    "/js/app.js": "/js/app.js?id=bb20fa6cccfb47615f33",
+    "/css/app.css": "/css/app.css?id=2771ab479099ba490a1c",
+    "/js/app.js.map": "/js/app.js.map?id=1e6ca60ade090cde6a9d",
+    "/css/app.css.map": "/css/app.css.map?id=d4a85d1a8329da3acb0c"
 }
