--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ _ide_helper.php
 .php_cs.cache
 /.vercel
 /node_modules
+/public/css
+/public/js
 /public/hot
+/public/mix-manifest.json
 /public/storage
 /storage/*.key
 /vendor
