--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "version": 2,
+    "public": false,
+    "github": {
+        "enabled": false
+    },
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.3.1" }
     },
