--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,20 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Configure PHP
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.0'
-          tools: composer:v2
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, mysql, pdo_mysql, bcmath
+          coverage: none
+
+      - name: Setup MySQL
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql version: '5.7'
+          mysql database: 'test'
+          mysql user: 'test'
+          mysql password: 'password'
 
       - name: Install dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
