--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "license": "proprietary",
     "require": {
         "php": "^8.0",
+        "bensampo/laravel-enum": "^3.2",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2.0",
