--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "css.validate": false,
+    "editor.formatOnSave": true,
     "editor.tabSize": 4,
     "[html]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
